# agenttrace

./: .dockerignore  .env.example  .gitignore  404.html  Dockerfile  README.md  docker-compose.yml  index.html  mkdocs.yml  next.config.ts  package.json  prisma.config.ts  requirements.txt  sitemap.xml  tsconfig.json  worklog.md
.github/workflows/: ci.yml  docs.yml  publish-agenttrace-langchain.yml  publish-pypi.yml
.scripts/: dev.sh
cli/: index.html
db/: custom.db
deployment/: index.html
docs/: cli.md  deployment.md  events.md  functional-documentation.md  index.md  install.md  integration-callback.md  integration-middleware.md  quickstart.md  user-manual.md
events/: index.html
functional-documentation/: index.html
install/: index.html
integration-callback/: index.html
integration-middleware/: index.html
integrations/agenttrace-langchain/: README.md  pyproject.toml
integrations/agenttrace-langchain/agenttrace_langchain/: __init__.py  async_client.py  async_run.py  callback.py  client.py  middleware.py  projection.py  run.py
integrations/agenttrace-langchain/examples/: README.md  async_basic.py  sync_basic.py
integrations/agenttrace-langchain/examples/notebooks/: 01_quickstart_middleware.ipynb  02_callback_handler.ipynb  README.md
integrations/agenttrace-langchain/tests/: test_async_run.py  test_callback.py  test_client.py  test_middleware.py  test_run.py
mini-services/socket-service/: index.ts  package.json
prisma/: schema.prisma  schema.sqlite.prisma
python-server/: .gitignore  LICENSE  README.md  pyproject.toml
python-server/agenttrace/: cli.py
python-server/agenttrace/server/: app.py  db.py  deps.py  models.py  realtime.py  security.py  seed.py  serializers.py
python-server/agenttrace/server/routes/: auth.py  events.py  keys.py  projects.py  runs.py  seed.py  stats.py
python-server/tests/: conftest.py  test_api.py
quickstart/: index.html
search/: search_index.json
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/events/: route.ts
src/app/api/keys/: route.ts
src/app/api/keys/[id]/: route.ts
src/app/api/projects/: route.ts
src/app/api/projects/[id]/: route.ts
src/app/api/projects/[id]/runs/: route.ts
src/app/api/runs/[id]/: route.ts
src/app/api/runs/[id]/events/: route.ts
src/app/api/seed/: route.ts
src/app/api/stats/: route.ts
src/components/: app-shell.tsx  boot-screen.tsx  providers.tsx
src/components/auth/: auth-screen.tsx
src/components/layout/: footer.tsx  resize-handle.tsx  sidebar.tsx
src/components/sequence-diagram/: event-detail-panel.tsx  lifeline-diagram.tsx  participants.ts  replay-controls.tsx  sequence-diagram.tsx  stacked-timeline.tsx
src/components/views/: dashboard-view.tsx  docs-view.tsx  integration-view.tsx  project-detail-view.tsx  projects-view.tsx  run-view.tsx  settings-view.tsx
src/lib/: api-auth.ts  api.ts  auth-client.tsx  auth.ts  db.sqlite.ts.example  db.ts  hooks.ts  keys.ts  seed.ts  session.ts  socket-client.ts  store.ts  tokens.ts  types.ts
src/types/: next-auth.d.ts
user-manual/: index.html
