[project]
name = "agenttrace-langchain"
version = "0.2.0"
description = "AgentTrace middleware for LangChain deepagents / create_agent"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["agents", "llm", "langchain", "deepagents", "observability", "tracing", "middleware"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Framework :: AsyncIO",
]
dependencies = [
    "langchain>=1.0.0",
    "langchain-core>=1.0",
    "requests>=2.31",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.14", "pytest-asyncio>=0.24"]

[project.urls]
Homepage = "https://github.com/CouLiBaLy-B/agenttrace"
Repository = "https://github.com/CouLiBaLy-B/agenttrace"
Issues = "https://github.com/CouLiBaLy-B/agenttrace/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agenttrace_langchain*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
